@@ -6,6 +6,7 @@ Version 1.6.6 (27 November 2014):
    New operators:
      * outputtab: table output
    Fixed bugs:
+     * seasmean: sets all time_bnds to the same values [Bug #5329]
      * histcount: doesn't recognize missing values
      * filesdes: doesn't work for GRIB2 files [Bug #5307]
 
